@@ -1,5 +1,6 @@
 #VERSION 0.9.6#
 
+ - added method _filter_phone() to class Peak_Filters_Advanced
  - added the class alias "Peak" to class "Peak_Core" if PHP >= 5.3
  - removed old functions _clean() and _cleans() from Core.php file
  - removed deprecated property $_extensions and methods __call() and ext() from class Peak_Core
